--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "node ./node_modules/gulp/bin/gulp server",
     "dev": "node ./node_modules/gulp/bin/gulp dev"
   },
-  "contributors" : [
+  "contributors": [
     {
       "name": "Thomas Hoppe",
       "email": "thomas.hoppe@n-fuse.de"
@@ -23,7 +23,7 @@
     "type": "MIT"
   },
   "devDependencies": {
-    "gulp": "^3.8.7",
+    "gulp": "^3.8.10",
     "vcl-build-demo": "git://github.com/vcl/vcl-build-demo",
     "vcl-default-theme": "git://github.com/vcl/default-theme",
     "vcl-default-theme-terms": "git://github.com/vcl/default-theme-terms"
@@ -40,8 +40,8 @@
     "tab"
   ],
   "vcldoc": {
-    "category": "",
-    "categoryPrio": 1,
+    "category": "Navigations",
+    "categoryPrio": 5,
     "subCategory": "",
     "subCategoryPrio": 1
   }
