--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "gulp": "^3.8.10",
     "vcl-build-demo": "git://github.com/vcl/vcl-build-demo",
     "vcl-default-theme": "git://github.com/vcl/default-theme",
-    "vcl-default-theme-terms": "git://github.com/vcl/default-theme-terms"
+    "vcl-default-theme-terms": "git://github.com/vcl/default-theme-terms",
+    "normalize.css": "^3.0.2",
+    "vcl-typography": "git://github.com/vcl/typography",
+    "vcl-font-awesome": "git://github.com/vcl/font-awesome",
+    "vcl-icon": "git://github.com/vcl/icon",
+    "vcl-button": "git://github.com/vcl/button",
+    "vcl-layout": "git://github.com/vcl/layout"
   },
   "dependencies": {},
   "repository": {
