--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "main": "package.json",
   "scripts": {
-    "test": "VCL_NO_PIPE=1 vcl --verbose ./package.json ./build/test.css",
+    "test": "VCL_NO_PIPE=1 vcl-preprocessor --verbose ./package.json ./build/test.css",
     "start": "node ./node_modules/gulp/bin/gulp dev"
   },
   "style": "index.styl",
