--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-vcl-preprocessor": "git://github.com/vcl/gulp-vcl-preprocessor",
-    "normalize.css": "^3.0.2",
+    "gulp-vcl-preprocessor": "^0.1.0",
+    "normalize.css": "^4.0.0",
     "pre-commit": "^1.1.2",
-    "vcl-app-area": "vcl/app-area",
-    "vcl-app-content-area": "vcl/app-content-area",
-    "vcl-badge": "git://github.com/vcl/badge",
-    "vcl-build-demo": "git://github.com/vcl/build-demo",
-    "vcl-button": "git://github.com/vcl/button",
-    "vcl-default-theme": "git://github.com/vcl/default-theme",
-    "vcl-default-theme-terms": "git://github.com/vcl/default-theme-terms",
-    "vcl-font-awesome": "git://github.com/vcl/font-awesome",
-    "vcl-flex-layout": "git://github.com/vcl/flex-layout",
-    "vcl-icon": "git://github.com/vcl/icon",
-    "vcl-layout-spans": "vcl/layout-spans",
-    "vcl-preprocessor": "git://github.com/vcl/preprocessor",
-    "vcl-typography": "vcl/typography",
-    "vcl-utils": "vcl/utils"
+    "vcl-app-area": "^0.1.0",
+    "vcl-app-content-area": "^0.1.0",
+    "vcl-badge": "^0.1.0",
+    "vcl-build-demo": "^0.1.0",
+    "vcl-button": "^0.1.0",
+    "vcl-default-theme": "^0.1.0",
+    "vcl-default-theme-terms": "^0.1.0",
+    "vcl-font-awesome": "^0.1.0",
+    "vcl-flex-layout": "^0.1.0",
+    "vcl-icon": "^0.1.0",
+    "vcl-layout-spans": "^0.1.0",
+    "vcl-preprocessor": "^0.1.0",
+    "vcl-typography": "^0.1.0",
+    "vcl-utils": "^0.1.0"
   },
   "dependencies": {},
   "repository": {
