--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vcl-tab-nav",
+  "name": "@vcl/tab-nav",
   "description": "List of navigation items arranged as tabs",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "package.json",
   "scripts": {
     "test": "VCL_NO_PIPE=1 vcl-preprocessor --verbose ./package.json ./build/test.css",
@@ -22,23 +22,23 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-vcl-preprocessor": "^0.1.0",
-    "normalize.css": "^4.0.0",
+    "@vcl/gulp-vcl-preprocessor": "^0.2.1",
+    "normalize.css": "^7.0.0",
     "pre-commit": "^1.1.2",
-    "vcl-app-area": "^0.1.0",
-    "vcl-app-content-area": "^0.1.0",
-    "vcl-badge": "^0.1.0",
-    "vcl-build-demo": "^0.1.0",
-    "vcl-button": "^0.1.0",
-    "vcl-default-theme": "^0.1.0",
-    "vcl-default-theme-terms": "^0.1.0",
-    "vcl-font-awesome": "^0.1.0",
-    "vcl-flex-layout": "^0.1.0",
-    "vcl-icon": "^0.1.0",
-    "vcl-layout-spans": "^0.1.0",
-    "vcl-preprocessor": "^0.1.0",
-    "vcl-typography": "^0.1.0",
-    "vcl-utils": "^0.1.0"
+    "@vcl/app-area": "^0.2.0",
+    "@vcl/app-content-area": "^0.2.0",
+    "@vcl/badge": "^0.2.0",
+    "@vcl/build-demo": "^0.2.0",
+    "@vcl/button": "^0.2.0",
+    "@vcl/default-theme": "^0.2.0",
+    "@vcl/default-theme-terms": "^0.2.0",
+    "@vcl/flex-layout": "^0.2.0",
+    "@vcl/font-awesome": "^0.2.0",
+    "@vcl/icon": "^0.2.0",
+    "@vcl/layout-spans": "^0.2.0",
+    "@vcl/preprocessor": "^0.2.2",
+    "@vcl/typography": "^0.2.0",
+    "@vcl/utils": "^0.2.0"
   },
   "dependencies": {},
   "repository": {
